route-nodejs.yaml
apiVersion: v1
items:

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"

    labels:
      app: nodejs-ex
      app.kubernetes.io/component: nodejs-ex
      app.kubernetes.io/instance: nodejs-ex
      app.kubernetes.io/name: nodejs
      app.kubernetes.io/part-of: frontdev2ops
      app.openshift.io/runtime: nodejs
      app.openshift.io/runtime-version: "12"

    name: nodejs-ex

  spec:

    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: nodejs-ex
      weight: 100
    wildcardPolicy: None
  
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
